ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:562676253586:certificate/b9a3c9f4-5eed-4278-a22a-a8573d94372d
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/tags: Environment=dev,Project=fancia
      alb.ingress.kubernetes.io/target-type: ip
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:eu-west-2:562676253586:certificate/b9a3c9f4-5eed-4278-a22a-a8573d94372d","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTP\": 80}, {\"HTTPS\":443}]","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/tags":"Environment=dev,Project=fancia","alb.ingress.kubernetes.io/target-type":"ip","kubernetes.io/ingress.class":"alb","met [...]
      kubernetes.io/ingress.class: alb
      meta.helm.sh/release-name: fancia-dev
      meta.helm.sh/release-namespace: fancia-dev
    creationTimestamp: "2026-03-12T12:41:10Z"
    finalizers:
    - ingress.k8s.aws/resources
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
    name: fancia-ingress
    namespace: fancia-dev
    resourceVersion: "252717"
    uid: 57f95c14-dfc2-4853-91c1-a682a637df81
  spec:
    ingressClassName: alb
    rules:
    - host: fancia.com
      http:
        paths:
        - backend:
            service:
              name: auth
              port:
                number: 8080
          path: /auth
          pathType: Prefix
        - backend:
            service:
              name: event
              port:
                number: 8081
          path: /event
          pathType: Prefix
        - backend:
            service:
              name: interestgroup
              port:
                number: 8082
          path: /interestgroup
          pathType: Prefix
        - backend:
            service:
              name: shared-common
              port:
                number: 8083
          path: /shared-common
          pathType: Prefix
        - backend:
            service:
              name: shared-user
              port:
                number: 8084
          path: /shared-user
          pathType: Prefix
        - backend:
            service:
              name: user
              port:
                number: 8085
          path: /user
          pathType: Prefix
    tls:
    - hosts:
      - fancia.com
      secretName: dev-fancia-tls
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
